--- a/View/Inicio.html
+++ b/View/Inicio.html
@@ -10,6 +10,6 @@
     <h1>Elije una tabla</h1>
     <a href="../Controller/core.php?controlador=controlador&valor=animal">Animales</a>
     <a href="../Controller/core.php?controlador=controlador&valor=usuario">Usuarios</a>
-    <a href="../Controller/core.php?controlador=controlador&valor=pepe">Adopciones</a>
+    <a href="../Controller/core.php?controlador=controlador&valor=adopcion">Adopciones</a>
 </body>
 </html>
